--- a/src/index.css
+++ b/src/index.css
@@ -22,17 +22,18 @@ body {
   left: 50%;
   padding: 40px 60px;
   border-radius: 10px;
-  text-align: center;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
 }
 
 .title {
+  text-align: center;
   color: var(--primary-color);
   font-size: 42px;
   font-family: 'Saira Extra Condensed', sans-serif;
 }
 
 .sub-title {
+  text-align: center;
   font-family: 'Yellowtail', cursive;
   font-size: 18px;
   position: relative;
@@ -50,35 +51,39 @@ body {
   left: 50%;
 }
 
-.emoji {
-  display: block;
-  text-align: center;
-  font-size: 75px;
+.wrapper form {
+  display: grid;  
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  margin-bottom: 1em;
 }
 
-.joke {
-  font-size: 16px;
-  font-weight: 400;
-  text-align: center;
-  word-wrap: break-word;
-  line-height: 24px;
-  margin: 10px 0;
-  opacity: 0;
-}
-
-.fade {
-  opacity: 1;
-  transition: opacity 1.5s;
+.wrapper form input {
+  padding: 10px 7px;
+  border-radius: 5px;
+  border: 1px solid #201d2e
 }
 
 button {
   background-color: #dc3545;
-  padding: 1em 0.5em;
-  width: 250px;
+  padding: 15px;
   color: #ffffff;
   border: none;
-  font-size: 1em;
-  margin: 1em 0 0;
-  border-radius: 0.3em;
+  border-radius: 5px;
   cursor: pointer;
+}
+
+.message {
+  margin-bottom: 1em;
+  font-weight: bold;
+  text-align: center;
+  font-size: 21px;
+  color: var(--primary-color);
+}
+
+.two-cols {
+  display: grid;  
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10px;
+  margin-bottom: 1em;
 }
